# tanim

./: .gitignore  animation.typ
tanim-cli/: Cargo.toml
tanim-vscode/: package-lock.json  package.json
