[package]
name = "tanim-cli"
version = "0.14.2"
edition = "2024"
description = "Render typst files to video in command line"
authors = ["liquidhelium <liquidhelium@163.com>"]
repository = "https://github.com/liquidhelium/tanim"
license = "MIT OR Apache-2.0"

[dependencies]
typst = {workspace = true, optional = true}
typst-render = {workspace = true, optional = true}
tinymist-world = {workspace = true, optional = true}
# HACK: tinymist-world 0.14.6 has misconfigured feature sets.
# this dependency is added to force cargo to enable those features.
# TODO: remove this dependency when upstream updated.
fontdb = {version = "0.23.0", default-features = false, features = ["fs", "memmap"]}
rsmpeg = {workspace = true, features = ["link_system_ffmpeg"], optional = true}
crossbeam = "0.8.4"
tiny-skia = "0.11.4"
tracing = "0.1.44"
thiserror = "2.0.18"
ndarray = "0.17.2"
num_cpus = "1.17.0"
tempfile = "3.25.0"
clap = {version = "4.5.59", features = ["derive"]}
anyhow = "1.0.101"
indicatif = "0.18.4"
tracing-indicatif = "0.3.14"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "registry"] }
tracing-tracy = {version = "0.11.4", optional = true}
zstd = "0.13.3"
once_cell = "1.21.3"

[features]
default = ["embedded-ffmpeg", "ffmpeg-bin", "typst-bin", "typst-lib"]
embedded-ffmpeg = ["dep:rsmpeg"]
ffmpeg-bin = []
typst-lib = ["dep:typst", "dep:typst-render", "dep:tinymist-world"]
typst-bin = []
tracy = ["dep:tracing-tracy"]
debug = []
